# project-template

./: .atom-build.yaml  .gitignore  README.md  docker-compose.yaml
application/: MANIFEST.in  dockerfile  pyproject.toml  setup.cfg  setup.py
application/entrypoints/: __init__.py
application/settings/: __init__.py  application.py
application/settings/defaults/: application.yaml
application/utilities/: __init__.py
