[metadata]
name = application
version = 0.0.0
description = Application description


[options]
packages = find:
python_requires = >= 3.8
include_package_data = true

setup_requires =
    setuptools
    wheel

install_requires =
    ruamel.yaml == 0.16.*

[options.extras_require]
testing =
    pytest == 6.*

[options.entry_points]
console_scripts =
    application = entrypoints:application
